fixing the margin on mobile

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -129,7 +129,7 @@ body {
 			.image-with-background,
 			.text-container {
 				width: 90%;
-				margin: 0 auto;
+				margin: 0 auto 1.5rem;
 				padding-left: 0;
 			}
 		}
